add "expired" read-only field to AdminAuthTokenOut
